<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.editProfile.EditProfileActivity">

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="15dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="14dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/edit_profile"
            android:textAlignment="center"
            android:textColor="@color/primary_color"
            android:textSize="12pt" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="15sp"
            android:gravity="center"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/montserrat_bold"
                android:textColor="@color/black"
                android:textSize="8pt"
                android:text="@string/firstname"
                android:textAlignment="textStart"
                android:layout_gravity="start"
                android:layout_marginBottom="15sp"/>

            <EditText
                android:id="@+id/editfirstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_background"
                android:elevation="2dp"
                android:fontFamily="@font/montserrat_regular"
                android:hint="@string/firstname_edit"
                android:inputType="text"
                android:paddingHorizontal="20dp"
                android:paddingVertical="15dp"
                android:layout_marginBottom="15sp"
                android:textSize="18sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/montserrat_bold"
                android:textColor="@color/black"
                android:textSize="8pt"
                android:text="@string/lastname"
                android:textAlignment="textStart"
                android:layout_gravity="start"
                android:layout_marginBottom="15sp"/>
            <EditText
                android:id="@+id/editlastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_background"
                android:elevation="2dp"
                android:fontFamily="@font/montserrat_regular"
                android:hint="@string/lastname_edit"
                android:inputType="text"
                android:paddingHorizontal="20dp"
                android:paddingVertical="15dp"
                android:layout_marginBottom="15sp"
                android:textSize="18sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/montserrat_bold"
                android:textColor="@color/black"
                android:textSize="8pt"
                android:text="E-mail"
                android:textAlignment="textStart"
                android:layout_gravity="start"
                android:layout_marginBottom="15sp"/>
            <EditText
                android:id="@+id/editemail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_background"
                android:elevation="2dp"
                android:fontFamily="@font/montserrat_regular"
                android:hint="@string/email_edit"
                android:inputType="textEmailAddress"
                android:paddingHorizontal="20dp"
                android:paddingVertical="15dp"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/changepwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15sp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/change_password"
                android:textColor="@color/primary_color"
                android:textSize="16sp" />

        </LinearLayout>

        <Button
            android:id="@+id/editbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="@drawable/filter_background"
            android:fontFamily="@font/montserrat_regular"
            android:paddingVertical="10dp"
            android:text="@string/edit"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="26sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>