<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fillViewport="true"
    tools:context=".views.quiz.QuizResult">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/resultTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:fontFamily="@font/montserrat_bold"
            android:textSize="23sp"
            android:layout_marginHorizontal="40dp"
            android:layout_marginVertical="50dp"
            android:textColor="@color/secondary_color"
            android:text="@string/congratulations_you_passed_the_quiz"/>
        <ImageView
            android:id="@+id/resultImage"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_gravity="center"
            android:src="@drawable/congrats"
            />

        <TextView
            android:id="@+id/resultDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginVertical="20dp"
            android:fontFamily="@font/montserrat_regular"
            android:textSize="18dp"
            android:text="@string/congratulations_we_re_so_proud_of_you"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_bold"
            android:textSize="23sp"
            android:layout_marginBottom="20dp"
            android:layout_marginHorizontal="40dp"
            android:textColor="@color/secondary_color"
            android:text="@string/the_answers"/>
        <LinearLayout
            android:id="@+id/resultAnswers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        </LinearLayout>
        <Button
            android:id="@+id/goHomeBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/return_to_home"
            android:layout_marginHorizontal="50dp"
            android:layout_marginVertical="30dp"
            android:fontFamily="@font/montserrat_extrabold"
            android:background="@drawable/filter_background"/>
    </LinearLayout>

</ScrollView>