<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".views.signup.SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/montserrat_extrabold"
            android:text="@string/let_s_create_a_n_new_account"
            android:textColor="@color/primary_color"
            android:textSize="28sp" />
        <ImageView
            android:layout_gravity="center"
            android:layout_width="300dp"
            android:layout_height="240dp"
            android:src="@drawable/login_img"/>

        <LinearLayout
            android:paddingBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4">

            <EditText
                android:id="@+id/nameSignup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_weight="2"
                android:background="@drawable/edit_text_background"
                android:elevation="2dp"
                android:fontFamily="@font/montserrat_regular"
                android:hint="@string/name"
                android:inputType="textCapWords"
                android:paddingHorizontal="20dp"
                android:paddingVertical="15dp"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/lastNameSignup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@drawable/edit_text_background"
                android:elevation="2dp"
                android:fontFamily="@font/montserrat_regular"
                android:hint="@string/last_name"
                android:inputType="textCapWords"
                android:paddingHorizontal="20dp"
                android:paddingVertical="15dp"
                android:textSize="18sp" />
        </LinearLayout>

        <EditText
            android:id="@+id/emailSignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/edit_text_background"
            android:elevation="2dp"
            android:fontFamily="@font/montserrat_regular"
            android:hint="Email"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="20dp"
            android:paddingVertical="15dp"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/passwordSignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/edit_text_background"
            android:elevation="2dp"
            android:fontFamily="@font/montserrat_regular"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingHorizontal="20dp"
            android:paddingVertical="15dp"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/confirmPasswordSignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/edit_text_background"
            android:elevation="2dp"
            android:fontFamily="@font/montserrat_regular"
            android:hint="@string/confirm_your_password"
            android:inputType="textPassword"
            android:paddingHorizontal="20dp"
            android:paddingVertical="15dp"
            android:textSize="18sp" />
        <Button
            android:id="@+id/nextSignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/filter_background"
            android:fontFamily="@font/montserrat_extrabold"
            android:gravity="center"
            android:paddingVertical="10dp"
            android:text="@string/next"
            android:textColor="@color/white"
            android:textSize="23sp" />
    </LinearLayout>

</ScrollView>