<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.changepassword.ChangePasswordActivity">

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="15dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="14dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/change_password"
            android:textAlignment="center"
            android:textColor="@color/primary_color"
            android:textSize="12pt" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="15sp"
            android:gravity="center"
            android:orientation="vertical">


            <EditText
                android:id="@+id/oldpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15sp"
                android:background="@drawable/edit_text_background"
                android:elevation="2dp"
                android:fontFamily="@font/montserrat_regular"
                android:hint="@string/old_password"
                android:inputType="textPassword"
                android:paddingHorizontal="20dp"
                android:paddingVertical="15dp"
                android:textSize="18sp" />


            <EditText
                android:id="@+id/editnewpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_background"
                android:elevation="2dp"
                android:fontFamily="@font/montserrat_regular"
                android:hint="@string/new_password"
                android:inputType="textPassword"
                android:paddingHorizontal="20dp"
                android:paddingVertical="15dp"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editconfirmpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15sp"
                android:background="@drawable/edit_text_background"
                android:elevation="2dp"
                android:fontFamily="@font/montserrat_regular"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:paddingHorizontal="20dp"
                android:paddingVertical="15dp"
                android:textSize="18sp" />
        </LinearLayout>

        <Button
            android:id="@+id/changepwdbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="@drawable/filter_background"
            android:fontFamily="@font/montserrat_regular"
            android:paddingVertical="10dp"
            android:text="@string/send"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="26sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>