<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.forgetpassword.ForgetPasswordActivity">

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="15dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="14dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/forgot_password"
            android:textAlignment="center"
            android:textColor="@color/primary_color"
            android:textSize="12pt" />

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/logo_najahni" />

        <EditText
            android:id="@+id/pwdemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/edit_text_background"
            android:elevation="2dp"
            android:fontFamily="@font/montserrat_regular"
            android:hint="E-mail"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="20dp"
            android:paddingVertical="15dp"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/forgot_description"
            android:textAlignment="textStart"
            android:textColor="@color/primary_color"
            android:textSize="10pt" />

        <Button
            android:id="@+id/sendbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="@drawable/filter_background"
            android:fontFamily="@font/montserrat_regular"
            android:paddingVertical="10dp"
            android:text="@string/send"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="26sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>