<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.signup.SignupPage2">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">
        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:textAlignment="center"
            android:fontFamily="@font/montserrat_extrabold"
            android:text="@string/we_re_one_step_forward"
            android:textColor="@color/primary_color"
            android:textSize="35sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textAlignment="viewStart"
            android:fontFamily="@font/montserrat_bold"
            android:text="Are you here to learn or to train ?"
            android:textColor="@color/primary_color"
            android:textSize="18sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textAlignment="viewStart"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/explain_role"
            android:textColor="@color/primary_color"
            android:textSize="14sp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="4"
            android:orientation="horizontal">
            <androidx.cardview.widget.CardView
                android:id="@+id/optionStudent"
                android:layout_width="0dp"
                android:layout_marginVertical="10dp"
                android:elevation="8dp"
                android:padding="16dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="2"
                android:layout_height="match_parent">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_margin="10dp"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:src="@drawable/student_img"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textAlignment="center"
                        android:textColor="@color/secondary_color"
                        android:fontFamily="@font/montserrat_regular"
                        android:text="@string/use_najahni_as_a_student"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/optionTrainer"
                android:layout_width="0dp"
                android:layout_marginVertical="10dp"
                android:elevation="8dp"
                android:padding="16dp"
                android:layout_weight="2"
                android:layout_height="match_parent">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_margin="10dp"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:src="@drawable/trainer_img"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textColor="@color/primary_color"
                        android:textAlignment="center"
                        android:fontFamily="@font/montserrat_regular"
                        android:text="@string/use_najahni_as_a_trainer"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/openFieldOptions"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_arrow_drop_down_24"
                app:tint="@color/primary_color"
                />
            <TextView
                android:textAlignment="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/primary_color"
                android:fontFamily="@font/montserrat_bold"
                android:text="Select your desired Filed(s)"/>
        </LinearLayout>
        <TextView
            android:id="@+id/selectedFields"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/secondary_color"
            android:fontFamily="@font/montserrat_bold"
            android:text="0 Fields selected"/>

        <Button
            android:id="@+id/createAccountBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/filter_background"
            android:fontFamily="@font/montserrat_extrabold"
            android:gravity="center"
            android:paddingVertical="10dp"
            android:text="@string/create_account"
            android:textColor="@color/white"
            android:textSize="23sp" />
    </LinearLayout>

</ScrollView>